--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,22 +1,3 @@
-<%= form_for @project do |f| %>
-	<%= f.label :title, 'Title' %>
-	<%= f.text_field :title %>
-	<br>
-	<br>
-	<%= f.label :abstract %>
-	<%= f.text_field :abstract %>
-	<br>
-	<br>
-	<%= f.label :description %>
-	<%= f.text_field :description %>
-	<br>
-	<br>
-	<%= f.label :budget %>
-	<%= f.text_field :budget %>
-	<br>
-	<br>
-	<%= f.submit 'Update' %>
-	<%= link_to 'Cancel', :back %>
-	<br>
+<h1>Edit Project details</h1>
 
-<% end %>
+<%= render 'form', button_name: 'Update' %>
