--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,24 +1,2 @@
-
-
-<%= form_for @project do |f| %>
-	<%= f.label :title, 'Title' %>
-	<%= f.text_field :title %>
-	<br>
-	<br>
-	<%= f.label :abstract %>
-	<%= f.text_field :abstract %>
-	<br>
-	<br>
-	<%= f.label :description %>
-	<%= f.text_field :description %>
-	<br>
-	<br>
-	<%= f.label :budget %>
-	<%= f.text_field :budget %>
-	<br>
-	<br>
-	<%= f.submit 'Create' %>
-	<%= link_to 'Cancel', :back %>
-	<br>
-
-<% end %>
+<h1>Add new Project</h1>
+<%= render 'form', button_name: 'Create' %>
